objects/Quote_ERP__c/Quote_ERP__c.object-meta.xml
<CustomObject>
    <description>A quote that is sent over from ERP</description>
    <label>Quote_ERP</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote_ERP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes_ERP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>