objects/Quote_ERP__c/fields/ERP_Contact__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact__c</fullName>
    <description>The ERP Contact identifier that is used to lookup the unique contact on a quote in the ERP.</description>
    <label>ERP_Contact</label>
    <length>6</length>
    <type>Text</type>
</CustomField>