objects/Quote_ERP__c/fields/ERP_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_First_Name__c</fullName>
    <label>ERP_Contact_First_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>