objects/Quote_ERP__c/fields/IS_Generic__c.field-meta.xml
<CustomField>
    <fullName>IS_Generic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox associated whether the quote ties to a a generic email or not.</description>
    <label>IS Generic</label>
    <type>Checkbox</type>
</CustomField>