objects/Quote_ERP__c/fields/Last_Account_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Activity__c</fullName>
    <formula>AccountID__r.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Account Activity</label>
    <type>Date</type>
</CustomField>