objects/Quote_ERP__c/fields/Last_Contact_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Activity__c</fullName>
    <formula>ContactID__r.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Contact Activity</label>
    <type>Date</type>
</CustomField>