objects/Quote_ERP__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the lead a quote is associated with</description>
    <label>LeadID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Quotes_ERP</relationshipLabel>
    <relationshipName>Quotes_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>