objects/Quote_ERP__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related opportunity</description>
    <label>OpportunityID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quotes_ERP</relationshipLabel>
    <relationshipName>Quotes_ERP</relationshipName>
    <type>Lookup</type>
</CustomField>