objects/Quote_ERP__c/fields/Quote_Email__c.field-meta.xml
<CustomField>
    <fullName>Quote_Email__c</fullName>
    <description>The email that is associated with the quote.</description>
    <label>Quote Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>