objects/Quote_ERP__c/fields/Quote_ERP_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_ERP_Created_Date__c</fullName>
    <description>The date the quote was created in the ERP system</description>
    <label>Quote ERP Created Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>