objects/Quote_ERP__c/fields/Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_Price__c</fullName>
    <description>The estimated price of the quote</description>
    <label>Quote Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>