objects/Quote_ERP__c/fields/Xometry_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_ERP_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Qoute ID created in Xometry ERP</description>
    <externalId>true</externalId>
    <label>Xometry_ERP_ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>