objects/Quote_ERP__c/listViews/Generic_Quotes_Queue_Quote_ERP.listView-meta.xml
<ListView>
    <fullName>Generic_Quotes_Queue_Quote_ERP</fullName>
    <filterScope>Queue</filterScope>
    <label>Generic Quotes Queue</label>
    <queue>Generic_Quotes_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>