objects/Quote_ERP__c/listViews/Recent_quotes.listView-meta.xml
<ListView>
    <fullName>Recent_quotes</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Last_Contact_Activity__c</columns>
    <columns>Last_Account_Activity__c</columns>
    <columns>Xometry_ERP_ID__c</columns>
    <columns>Quote_Email__c</columns>
    <columns>Quote_Price__c</columns>
    <columns>ERP_Contact__c</columns>
    <columns>AccountID__c</columns>
    <columns>ContactID__c</columns>
    <columns>OpportunityID__c</columns>
    <columns>LeadID__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Recent quotes</label>
</ListView>